chore(backend): finish the Java 21+ API switch, and say why Folder cannot join it
Nine `get(0)` / `get(size() - 1)` calls in seven files move to
`getFirst()` / `getLast()`. This is not new API adoption — FlagSyncService
and MailboxMaintenanceService already used the sequenced accessors, so what
was left was an inconsistency. Every one of the nine is guarded by an
emptiness check on the line above or the same expression, so swapping
IndexOutOfBoundsException for NoSuchElementException changes no behaviour.

Also `Math.clamp(limit, 1, AUTOCOMPLETE_MAX_LIMIT)` for the nested min/max
in ContactService, and `Thread.sleep(Duration)` in the two places that held
a Duration and immediately broke it into millis.

Try-with-resources is added only in a test: DraftLifecycleGreenMailIT
closed its Store in a finally placed after connect(), so a failed connect
leaked the connection.

The IMAP folder closes stay try/finally, and now carry the reason.
jakarta.mail.Folder does implement AutoCloseable, so a resource block
compiles — but Folder.close() is close(TRUE), i.e. expunge (verified in
jakarta.mail-api 2.1.3: iconst_1 before invokevirtual close:(Z)V). Wrapping
a folder in try-with-resources would permanently delete everything flagged
\Deleted, including on the READ_ONLY path that asks for no writes at all.
Store and Transport stay on closeQuietly for the neighbouring reason: their
close() throws MessagingException, which a resource block would raise after
an already-delivered message and report to the user as a failed send.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>